# fastapi-learning

./: pyproject.toml
