[tool.poetry]
name = "fastapi-learn"
version = "0.1.0"
description = ""
authors = ["Felipe Ribeiro <feliperibeiro.santos@loggi.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
python-multipart = "^0.0.6"
bcrypt = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
